more long term data

--- a/RScripts/WaterLevel_Discharge.Rmd
+++ b/RScripts/WaterLevel_Discharge.Rmd
@@ -211,6 +211,7 @@ plot the water level so that each station data can be cleaned
 ```{r plot, echo=FALSE}
 
 ##clean data
+
 plot_ly(WL_01, x = ~DateTime, y = ~WLPres_kpa, type = 'scatter', mode = 'markers') 
 
 ```
@@ -221,12 +222,25 @@ this script is for ceaning each station. There may be additional lines written f
 ```{r clean, echo=FALSE}
 
 WL_01 <- WL_01%>%filter(WLPres_kpa > 63 & WLPres_kpa < 70)
+#looks like WL changed in febuary
+#Actually no - wierd
+#WL_01$WLPres_kpa[which(WL_01$DateTime < as.POSIXct("2022-02-12 13:00", tz="UTC"))] <- WL_01$WLPres_kpa[which(WL_01$DateTime < as.POSIXct("2022-02-12 13:00", tz="UTC"))] - (64.3919-63.8785)
 WL_01$DateTime <- round_date(WL_01$DateTime,unit="15 minutes")
-WL_02 <- WL_02%>%filter(WLPres_kpa > 63)
+
+WL_02 <- WL_02%>%filter(WLPres_kpa != 62.566)
+
 WL_03 <- WL_03%>%filter(WLPres_kpa > 63.1)
+
 WL_04 <- WL_04%>%filter(WLPres_kpa > 63)
+
 WL_05 <- WL_05%>%filter(DateTime != as.POSIXct("2021-07-28 14:00:00", tz = "UTC"))
+WL_05 <- WL_05%>%filter(WLPres_kpa > 64)
+
+
 WL_06 <- WL_06%>%filter(DateTime != as.POSIXct("2021-07-16 14:00:00", tz = "UTC"))
+#WL_06$WLPres_kpa[which(WL_06$DateTime > as.POSIXct("2021-07-26 14:15", tz="UTC")&WL_06$DateTime < as.POSIXct("2021-07-26 16:30", tz="UTC"))] <- NA
+#WL_06$WLPres_kpa[which(WL_06$DateTime > as.POSIXct("2021-07-26 14:15", tz="UTC")&WL_06$DateTime < as.POSIXct("2021-07-27 09:15", tz="UTC"))] <- WL_06$WLPres_kpa[which(WL_06$DateTime > as.POSIXct("2021-07-26 14:15", tz="UTC")&WL_06$DateTime < as.POSIXct("2021-07-27 09:15", tz="UTC"))] - (77.227-68.473)
+#WL_06$WLPres_kpa[which(WL_06$DateTime > as.POSIXct("2021-07-27 16:30", tz="UTC")&WL_06$DateTime < as.POSIXct("2021-07-28 08:30", tz="UTC"))] <- WL_06$WLPres_kpa[which(WL_06$DateTime > as.POSIXct("2021-07-27 16:30", tz="UTC")&WL_06$DateTime < as.POSIXct("2021-07-28 08:30", tz="UTC"))] - (77.227-68.473)
 WL_06 <- WL_06%>%filter(DateTime < as.POSIXct("2021-07-26 14:30:00", tz = "UTC")|
                           DateTime > as.POSIXct("2021-07-28 14:15:00", tz = "UTC"))
 
@@ -466,38 +480,6 @@ All_Well <- Baro_corrected %>% filter(Station == "WL_Well01"|Station == "WL_Well
 All_Well <- All_Well[,c("DateTime","BaroTemp_c","WLTemp_c","Station","WL_m","Total_kpa")]
 All_Well$Q_m3s <- NA
 
-#WL_01$WLPres_kpa <- WL_01$WLPres_kpa *0.10197442889221
-#WL_02$WLPres_kpa <- WL_02$WLPres_kpa *0.10197442889221
-#WL_03$WLPres_kpa <- WL_03$WLPres_kpa *0.10197442889221
-#WL_04$WLPres_kpa <- WL_04$WLPres_kpa *0.10197442889221
-#WL_05$WLPres_kpa <- WL_05$WLPres_kpa *0.10197442889221
-#WL_06$WLPres_kpa <- WL_06$WLPres_kpa *0.10197442889221
-
-Baro <- Baro%>%filter(DateTime > as.POSIXct("2021-06-11 00:00:00"))
-
-WL_01 <- WL_01[,c("DateTime","WL_m","WLTemp_c")]
-WL_02 <- WL_02[,c("DateTime","WL_m","WLTemp_c")]
-WL_03 <- WL_03[,c("DateTime","WL_m","WLTemp_c")]
-WL_04 <- WL_04[,c("DateTime","WL_m","WLTemp_c")]
-WL_05 <- WL_05[,c("DateTime","WL_m","WLTemp_c")]
-WL_06 <- WL_06[,c("DateTime","WL_m","WLTemp_c")]
-
-colnames(WL_01) <- c("DateTime","Stn01_WL_m","Stn01_WLTemp_C")
-colnames(WL_02) <- c("DateTime","Stn02_WL_m","Stn02_WLTemp_C")
-colnames(WL_03) <-  c("DateTime","Stn03_WL_m","Stn03_WLTemp_C")
-colnames(WL_04) <- c("DateTime","Stn04_WL_m","Stn04_WLTemp_C")
-colnames(WL_05) <- c("DateTime","Stn05_WL_m","Stn05_WLTemp_C")
-colnames(WL_06) <- c("DateTime","Stn06_WL_m","Stn06_WLTemp_C")
-colnames(Baro) <- c("DateTime","AirPress_kpa","AirTemp_C")
-
-
-All_WL_wide <- full_join(Baro,WL_01,by="DateTime")
-All_WL_wide <- full_join(All_WL_wide,WL_02,by="DateTime")
-All_WL_wide <- full_join(All_WL_wide,WL_03,by="DateTime")
-All_WL_wide <- full_join(All_WL_wide,WL_04,by="DateTime")
-All_WL_wide <- full_join(All_WL_wide,WL_05,by="DateTime")
-All_WL_wide <- full_join(All_WL_wide,WL_06,by="DateTime")
-
 ```
 
 # plot discharge
@@ -525,7 +507,47 @@ Baro_corrected2<-Baro_corrected %>% filter(Station != "WL_Well02")  %>% filter(S
 write.csv(Baro_corrected2, here::here("WaterLevel/WaterLevel_merge_2021-06-11_2021-10-01.csv"),
           row.names = FALSE)
 
-write.csv(All_WL_wide, here::here("WaterLevel/WaterLevel_merge_2021-06-11_2021-10-01.csv"),
+```
+
+
+```{r wide data, echo=FALSE}
+Baro <- Baro%>%filter(DateTime > as.POSIXct("2021-06-11 00:00:00"))
+colnames(Baro) <- c("DateTime","AirPress_kpa","AirTemp_C")
+
+WL_01 <- Baro_corrected %>% filter(Station == "WL_01")
+WL_01 <- WL_01[,c("DateTime","WL_m","WLTemp_c","Total_kpa")]
+colnames(WL_01) <- c("DateTime","Stn01_WL_m","Stn01_WLTemp_C","Stn01_Total_kpa")
+
+WL_02 <- Baro_corrected %>% filter(Station == "WL_02")
+WL_02 <- WL_02[,c("DateTime","WL_m","WLTemp_c","Total_kpa")]
+colnames(WL_02) <- c("DateTime","Stn02_WL_m","Stn02_WLTemp_C","Stn02_Total_kpa")
+
+WL_03 <- Baro_corrected %>% filter(Station == "WL_03")
+WL_03 <- WL_03[,c("DateTime","WL_m","WLTemp_c","Total_kpa")]
+colnames(WL_03) <- c("DateTime","Stn03_WL_m","Stn03_WLTemp_C","Stn03_Total_kpa")
+
+WL_04 <- Baro_corrected %>% filter(Station == "WL_04")
+WL_04 <- WL_04[,c("DateTime","WL_m","WLTemp_c","Total_kpa")]
+colnames(WL_04) <- c("DateTime","Stn04_WL_m","Stn04_WLTemp_C","Stn04_Total_kpa")
+
+WL_05 <- Baro_corrected %>% filter(Station == "WL_05")
+WL_05 <- WL_05[,c("DateTime","WL_m","WLTemp_c","Total_kpa")]
+colnames(WL_05) <- c("DateTime","Stn05_WL_m","Stn05_WLTemp_C","Stn05_Total_kpa")
+
+WL_06 <- Baro_corrected %>% filter(Station == "WL_06")
+WL_06 <- WL_06[,c("DateTime","WL_m","WLTemp_c","Total_kpa")]
+colnames(WL_06) <- c("DateTime","Stn06_WL_m","Stn06_WLTemp_C","Stn06_Total_kpa")
+
+All_WL_wide <- full_join(Baro,WL_01,by="DateTime")
+All_WL_wide <- full_join(All_WL_wide,WL_02,by="DateTime")
+All_WL_wide <- full_join(All_WL_wide,WL_03,by="DateTime")
+All_WL_wide <- full_join(All_WL_wide,WL_04,by="DateTime")
+All_WL_wide <- full_join(All_WL_wide,WL_05,by="DateTime")
+All_WL_wide <- full_join(All_WL_wide,WL_06,by="DateTime")
+
+
+
+write.csv(All_WL_wide, here::here("WaterLevel/WaterLevel_Wide_2021.csv"),
           row.names = FALSE)
 
 
