--- a/RScripts/CO2_Corrected.Rmd
+++ b/RScripts/CO2_Corrected.Rmd
@@ -84,7 +84,7 @@ for (site in site_names){
       CO2Data=CO2Data[,1:3]
         if(names(CO2Data)[1] == "Date"){
           colnames(CO2Data) <- c("Date","Time","ppm")
-        CO2Data$DateTime <- as.POSIXct(paste(CO2Data$Date, CO2Data$Time), format="%m/%d/%Y %I:%M:%S %p", tz = "UTC")
+        CO2Data$DateTime <- as.POSIXct(paste(CO2Data$Date, CO2Data$Time),  format="%m/%d/%Y %I:%M:%S %p", tz = "UTC")
       } else { 
         colnames(CO2Data) <- c("Date","Time","ppm")
         CO2Data$DateTime <- as.POSIXct(paste(CO2Data$Date, CO2Data$Time), format="%d/%m/%Y %H:%M:%S", tz = "UTC")
@@ -111,7 +111,7 @@ for (site in site_names){
     
   }
   
-   CO2Data$DateTime <- round_date(CO2Data$DateTime, "15 mins")
+#   CO2Data$DateTime <- round_date(CO2Data$DateTime, "15 mins")
 
   CO2Data=unique(CO2Data)
   CO2Data$Date <- NULL
@@ -123,10 +123,12 @@ for (site in site_names){
 
 
 ```
-
+station 1 is good, do not open
 ```{r check CO2 data plot, echo=FALSE}
 
 ##check data
+plot_ly(CO2_01, x = ~DateTime, y = ~ppm, type = 'scatter', mode = 'markers') 
+
 plot_ly(CO2_01%>%
   filter(DateTime < as.POSIXct("2021-07-30 07:27:00", tz = "UTC")), x = ~DateTime, y = ~ppm, type = 'scatter', mode = 'markers') 
 
@@ -142,8 +144,12 @@ CO2_01  <- CO2_01%>%
 #sensor out of water
   filter(DateTime < as.POSIXct("2021-06-19 04:15:00", tz = "UTC") | DateTime > as.POSIXct("2021-06-25 10:30:00", tz = "UTC"))
 
-
+library(lubridate)
 #CO2_02
+#the gap from July to Oct is real :(
+CO2_02$DateTime <- round_date(CO2_02$DateTime, "1 mins")
+timeint_15 <- seq(ymd_hm("2021-06-10 00:00:00"),ymd_hm("2022-03-15 11:30:00"), by = '15 mins')
+
 CO2_02  <- CO2_02 %>% 
   filter(DateTime < as.POSIXct("2021-06-11 03:34:00", tz = "UTC") | DateTime > as.POSIXct("2021-06-16 11:52:00", tz = "UTC")) %>%
     filter(DateTime < as.POSIXct("2021-06-29 14:40:00", tz = "UTC") | DateTime > as.POSIXct("2021-06-29 15:00:00", tz = "UTC")) %>%
