--- a/KriddieFolder/LongTermData_Stn05_2022-11-08.Rmd
+++ b/KriddieFolder/LongTermData_Stn05_2022-11-08.Rmd
@@ -445,7 +445,7 @@ for (site in site_names){
 }
 
 LUXabajo_05_Lux_data$Station <- "Stn05"
-LUXarriba_05_Lux_data <- "Stn05"
+LUXarriba_05_Lux_data$Station <- "Stn05"
 
 ```
 
@@ -455,10 +455,10 @@ LUXarriba_05_Lux_data <- "Stn05"
 
 
 ##check data
-plot_ly(LUXabajo_05_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'markers') 
+plot_ly(LUXabajo_05_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'lines') 
 
 
-plot_ly(LUXarriba_05_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'markers') 
+plot_ly(LUXarriba_05_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'lines') 
 
 #clean 
 #DO_06 <- DO_06%>%filter(DO_mgL > -100)
