--- a/KriddieFolder/LongTermData_Stn01_2022-11-08.Rmd
+++ b/KriddieFolder/LongTermData_Stn01_2022-11-08.Rmd
@@ -537,8 +537,8 @@ CO2_01$Station <- "Stn01"
 ##check data
 plot_ly(CO2_01, x = ~DateTime, y = ~ppm, type = 'scatter', mode = 'markers') 
 
-#plot_ly(CO2_01%>%
-#  filter(DateTime < as.POSIXct("2021-07-30 07:27:00", tz = "UTC")), x = ~DateTime, y = ~ppm, type = 'scatter', mode = 'markers') 
+plot_ly(CO2_01%>%
+  filter(DateTime > as.POSIXct("2022-06-01 00:00:00", tz = "UTC")), x = ~DateTime, y = ~ppm, type = 'scatter', mode = 'markers') 
 
 ```
 
@@ -553,6 +553,8 @@ CO2_01  <- CO2_01%>%
 #sensor out of water
   filter(DateTime < as.POSIXct("2021-06-19 04:15:00", tz = "UTC") | DateTime > as.POSIXct("2021-06-25 10:30:00", tz = "UTC"))%>%
   filter(DateTime != as.POSIXct("2021-06-02 12:00:00", tz = "UTC"))
+
+CO2_01 <- CO2_01%>%filter(ppm>20)
 ```
 
 #plot
@@ -762,13 +764,16 @@ for (site in site_names){
   #LuxData=LuxData[,2:4]
   LuxData=unique(LuxData)
   LuxData$DateTime <- as.POSIXct(LuxData$DateTime, format="%m/%d/%y %I:%M:%S %p", tz="UTC")
+ # LuxData$DateTime <- as.POSIXct(LuxData$DateTime, format="%m/%d/%y %H:%M", tz="UTC")
   assign((paste(site,"Lux_data",sep="_")),LuxData) #creates object with new appended data
   rm(LuxData) #removes WLdata so that multiple sites aren't appended together
 }
 
 LUXabajo_01_Lux_data$Station <- "Stn01"
-LUXarriba_01_Lux_data <- "Stn01"
+LUXabajo_01_Lux_data <- LUXabajo_01_Lux_data %>%rename("Luxabajo" = "Lux")
 
+LUXarriba_01_Lux_data$Station <- "Stn01"
+LUXarriba_01_Lux_data <- LUXarriba_01_Lux_data %>%rename("Luxarriba" = "Lux")
 ```
 
 #plot lux
@@ -777,11 +782,99 @@ LUXarriba_01_Lux_data <- "Stn01"
 
 
 ##check data
-plot_ly(LUXabajo_01_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'markers') 
+plot_ly(LUXabajo_01_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'lines') 
 
 
-plot_ly(LUXarriba_01_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'markers') 
+plot_ly(LUXarriba_01_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'lines') 
 
 #clean 
 #DO_06 <- DO_06%>%filter(DO_mgL > -100)
+```
+
+#merge data
+
+```{r merge data, echo=FALSE}
+
+
+Stn01 <- full_join(CO2_01,DO_01, by=c('DateTime','Station'))
+Stn01 <- full_join(Stn01,WL_01, by=c('DateTime','Station'))
+Stn01 <- full_join(Stn01,LUXabajo_01_Lux_data, by=c('DateTime','Station'))
+Stn01 <- full_join(Stn01,LUXarriba_01_Lux_data, by=c('DateTime','Station'))
+
+Stn01_filter <- Stn01%>%filter(DateTime > as.POSIXct("2021-08-10 00:00:00", tz = "UTC") & DateTime <= as.POSIXct("2021-08-17 12:00:00", tz = "UTC"))
+
+
+```
+
+
+#plot for prelim paper
+
+```{r merge data, echo=FALSE}
+
+
+library(ggpubr)
+library(gridExtra)
+library(dplyr)
+
+O2 <- ggplot(data = Stn01_filter , aes(DateTime, DO_mgL)) +
+  geom_point(color = "#E69F00") +
+  labs(#title = "CO2  stations",
+       y = "O2 mg/L", x = "") 
+co2 <- ggplot(data = Stn01_filter, aes(DateTime, ppm)) +
+  geom_point(color = "#56B4E9") +
+  labs(#title = "CO2  stations",
+       y = "CO2 ppm", x = "") 
+Stn01_filter$Q_Ls <- Stn01_filter$Q_m3s * 1000
+Q <- ggplot(data = Stn01_filter, aes(DateTime, Q_Ls)) +
+  geom_point(color = "#009E73") +
+  labs(#title = "Q  stations",
+       y = "Q L/s", x = "") 
+LuxUP <- ggplot(data = Stn01_filter, aes(DateTime, Luxarriba)) +
+  geom_point(color = "#F0E442") +
+  labs(#title = "Q  stations",
+       y = "LUX above water", x = "") 
+LuxDOWN <- ggplot(data = Stn01_filter, aes(DateTime, Luxabajo)) +
+  geom_point(color = "#0072B2") +
+  labs(#title = "Q  stations",
+       y = "LUX below water", x = "") 
+
+grid.arrange(O2, co2, Q, LuxUP,LuxDOWN, ncol=1)
+
+all.figs <- ggarrange(NULL,co2, NULL,Q, ncol = 1,
+               heights = c(0.2,1,0.2,1),
+               labels = c("A","","B",""),
+               font.label = list(size = 24, color = "black", face = "bold"),
+              # label.x = .1,
+              # label.y = .1,
+               align="h", common.legend = FALSE
+               )
+
+
+#########
+Stn01_filter2 <- Stn01_filter%>%select(c("DateTime","DO_mgL","ppm","Q_Ls","Luxarriba","Luxabajo"))
+
+mdata <- melt(Stn01_filter2, id=c("DateTime")) 
+
+#fall
+f <- ggplot(mdata,
+            aes(x=DateTime, y=value,color = variable)) + 
+  geom_line(size = 3) 
+
+f2 <-f + facet_wrap(~variable,ncol=1, scales = "free") +
+  theme_bw(base_size = 18) +
+  theme(axis.title.x=element_blank(),
+        axis.title.y=element_blank())  + 
+theme(
+  strip.background = element_blank(),
+  strip.text.x = element_blank()
+) +
+       scale_color_discrete(labels=c('DO [mg/L]', 'CO2 [ppm]', 'Q [L/s]', 'Light above water [LUX]','Light below water [LUX]'))
+
+
+#using tiff() and dev.off
+tiff('LongTermData.tiff', units="in", width=5, height=4, res=300, compression = 'lzw')
+f2
+dev.off()
+
+
 ```
