--- a/KriddieFolder/LongTermData_Stn03_2022-11-08.Rmd
+++ b/KriddieFolder/LongTermData_Stn03_2022-11-08.Rmd
@@ -612,7 +612,7 @@ for (site in site_names){
 }
 
 LUXabajo_03_Lux_data$Station <- "Stn03"
-LUXarriba_03_Lux_data <- "Stn03"
+LUXarriba_03_Lux_data$Station <- "Stn03"
 
 ```
 
@@ -622,10 +622,10 @@ LUXarriba_03_Lux_data <- "Stn03"
 
 
 ##check data
-plot_ly(LUXabajo_03_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'markers') 
+plot_ly(LUXabajo_03_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'lines') 
 
 
-plot_ly(LUXarriba_03_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'markers') 
+plot_ly(LUXarriba_03_Lux_data, x = ~DateTime, y = ~Lux, type = 'scatter', mode = 'lines') 
 
 #clean 
 #DO_06 <- DO_06%>%filter(DO_mgL > -100)
